--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -1,10 +1,9 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 @source "../../../apps/**/*.{ts,tsx}";
 @source "../../../components/**/*.{ts,tsx}";
 @source "../**/*.{ts,tsx}";
 
-@import "tw-animate-css";
-
+@import 'tw-animate-css';
 @custom-variant dark (&:is(.dark *));
 
 :root {
@@ -123,5 +122,10 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+  html,
+  body,
+  #root {
+    @apply h-full;
   }
 }
