chore: use pnpm catalog

--- a/turbo/generators/templates/pkg/base/package.json.hbs
+++ b/turbo/generators/templates/pkg/base/package.json.hbs
@@ -15,7 +15,7 @@
     "@workspace/config-eslint": "workspace:*",
     "@workspace/config-typescript": "workspace:*",
     "@types/node": "^24.6.0",
-    "eslint": "^9.36.0",
-    "typescript": "^5.9.2"
+    "eslint": "catalog:",
+    "typescript": "catalog:"
   }
 }
