--- a/turbo/generators/templates/pkg/react-ui/package.json.hbs
+++ b/turbo/generators/templates/pkg/react-ui/package.json.hbs
@@ -4,7 +4,7 @@
     "react-dom": "catalog:"
   },
   "devDependencies": {
-    "@types/node": "catalog:",
+    "@types/bun": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@workspace/config-typescript": "workspace:*",
