chore: run format

--- a/apps/site/src/components/SiteFooter.astro
+++ b/apps/site/src/components/SiteFooter.astro
@@ -1,8 +1,7 @@
 ---
-import StarlightFooter from '@astrojs/starlight/components/Footer.astro';
+import StarlightFooter from '@astrojs/starlight/components/Footer.astro'
 
-const isHomepage = Astro.locals.starlightRoute.id === '';
-
+const isHomepage = Astro.locals.starlightRoute.id === ''
 ---
 {
   isHomepage ? (
