--- a/turbo/generators/templates/pkg/base/package.json.hbs
+++ b/turbo/generators/templates/pkg/base/package.json.hbs
@@ -1,6 +1,4 @@
 {
-  "name": "@workspace/{{name}}",
-  "version": "0.0.0",
   "devDependencies": {
     "@types/node": "catalog:",
     "@workspace/config-typescript": "workspace:*",
@@ -11,8 +9,11 @@
     "./*": "./src/*.ts"
   },
   "license": "MIT",
+  "name": "@workspace/{{name}}",
   "private": false,
   "scripts": {
     "check-types": "tsc --noEmit",
-  }
+  },
+  "type": "module",
+  "version": "0.0.0"
 }
