--- a/turbo/generators/templates/pkg/react-ui/package.json.hbs
+++ b/turbo/generators/templates/pkg/react-ui/package.json.hbs
@@ -1,6 +1,4 @@
 {
-  "name": "@workspace/{{name}}",
-  "version": "0.0.0",
   "dependencies": {
     "react": "catalog:",
     "react-dom": "catalog:"
@@ -16,8 +14,11 @@
     "./*": "./src/*.tsx"
   },
   "license": "MIT",
+  "name": "@workspace/{{name}}",
   "private": false,
   "scripts": {
     "check-types": "tsc --noEmit",
-  }
+  },
+  "type": "module",
+  "version": "0.0.0"
 }
