fix(generators): remove trailing comma's from json files in templates

--- a/turbo/generators/templates/pkg/base/package.json.hbs
+++ b/turbo/generators/templates/pkg/base/package.json.hbs
@@ -12,7 +12,7 @@
   "name": "@workspace/{{name}}",
   "private": false,
   "scripts": {
-    "check-types": "tsc --noEmit",
+    "check-types": "tsc --noEmit"
   },
   "type": "module",
   "version": "0.0.0"
