--- a/turbo/generators/templates/pkg/react-ui/tsconfig.json.hbs
+++ b/turbo/generators/templates/pkg/react-ui/tsconfig.json.hbs
@@ -2,5 +2,5 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "extends": "@workspace/config-typescript/base.json",
+  "extends": "@workspace/config-typescript/base.json"
 }
