--- a/turbo/generators/templates/pkg/react-ui/package.json.hbs
+++ b/turbo/generators/templates/pkg/react-ui/package.json.hbs
@@ -1,8 +1,4 @@
 {
-  "dependencies": {
-    "react": "catalog:",
-    "react-dom": "catalog:"
-  },
   "devDependencies": {
     "@types/bun": "catalog:",
     "@types/react": "catalog:",
@@ -15,6 +11,10 @@
   },
   "license": "MIT",
   "name": "@workspace/{{name}}",
+  "peerDependencies": {
+    "react": "catalog:",
+    "react-dom": "catalog:"
+  },
   "private": false,
   "scripts": {
     "check-types": "tsc --noEmit"
